fixed gap between nav and body

--- a/Tony/nav.css
+++ b/Tony/nav.css
@@ -9,6 +9,7 @@ body {
 }
 nav {
   margin: 0;
+  height: 80px;
 }
 .bannerImage {
   background-size: cover;
